--- a/02-javascript-fundamentals/19-window-object/index.html
+++ b/02-javascript-fundamentals/19-window-object/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <h1>JavaScript Sandbox: Section 2</h1>
+  <!-- to test vertical scroll -->
+  <div style="margin-top:1000px"></div>
 
   <script src="app.js"></script>
 </body>
